Release Notes
=============
The following TLAs are used:-
NBC - Not Backward Compatible with previous version of the framework.

Release 1.1.8
--------------------
 - added sonatype repository distribution management in the pom.xml
 
Release 1.1.7
--------------------
 - Port to SF.
 - Bumped dependent project versions up to official releases as follows,
   ikasan-common-1.1.12

Previous Releases
--------------------
<<see ikasan-1.2reNotes.txt for some older changes >>